# lease_crawler_agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  plan.md
.github/workflows/: ci.yml
agent/: package.json  pnpm-lock.yaml  tsconfig.json
agent/scripts/: mock-photon.ts
agent/src/: classifier.ts  index.ts  state.ts  tools.ts
agent/tests/unit/: classifier.test.ts  state.test.ts  tools.test.ts
scripts/: debug-pipeline.py  test-pipeline.sh
server/: README.md  pyproject.toml
server/src/lease_crawler/: auto_expand.js  crawler.py  extract.py  inference.py  log_setup.py  main.py  models.py  settings.py
server/src/lease_crawler/routers/: analyze.py  ask.py  crawl.py  explore.py
server/tests/: conftest.py
server/tests/integration/: test_analyze_avalon.py  test_crawl_integration.py
server/tests/integration/cassettes/: test_analyze_avalon.yaml
server/tests/integration/fixtures/: avalon_silicon_valley_min.html
server/tests/unit/: test_analyze_route.py  test_ask.py  test_crawl_route.py  test_crawler.py  test_health.py  test_inference.py  test_models.py
